# python-module-8

./: README.md
ex0/: construct.py
ex0/matrix_env/: pyvenv.cfg
ex01/: loading.py
ex02/: .env.example  .gitignore  oracle.py
ex1/: pyproject.toml  requirements.txt
