[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix data analysis"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
requests = "^2.31.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"